--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,7 +9,11 @@
       <p>Welcome </p>
       <p>{{name}}</p>
     </div>
-  </div>
+
+    <div class="profile-info">
+      <p>Welcome </p>
+      <p>{{name}}</p>
+    </div>
 
   <app-sidebar></app-sidebar>
 </div>
