--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,5 +15,16 @@
       <p>{{name}}</p>
     </div>
 
+    <div class="profile-info">
+      <p>Welcome </p>
+      <p>{{name}}</p>
+    </div>
+
+    <div class="profile-info">
+      <p>Welcome </p>
+      <p>{{name}}</p>
+    </div>
+
+
   <app-sidebar [menus]="sideMenus"></app-sidebar>
 </div>
